// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Scale /> <Scale.Item /> should render as controlled component 1`] = `
<Scale
  className={null}
  name="my-radio-name"
  onChange={[Function]}
  style={Object {}}
  tickLabels={true}
  value={10}
>
  <div
    className="nice-scale"
    style={Object {}}
  >
    <ol
      className="nice-scale-selection"
    >
      <Item
        checked={false}
        className={null}
        key=".0"
        label="Nice to have"
        name="my-radio-name"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={1}
      >
        <li
          key="1"
        >
          <label>
            <input
              checked={false}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value={1}
            />
            <span />
            <span
              className="nice-scale-label"
              style={Object {}}
            >
              Nice to have
            </span>
          </label>
        </li>
      </Item>
      <Item
        checked={false}
        className={null}
        key=".1"
        label=""
        name="my-radio-name"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={5}
      >
        <li
          key="5"
        >
          <label>
            <input
              checked={false}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value={5}
            />
            <span />
          </label>
        </li>
      </Item>
      <Item
        checked={true}
        className={null}
        key=".2"
        label="Must have"
        name="my-radio-name"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={10}
      >
        <li
          key="10"
        >
          <label>
            <input
              checked={true}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value={10}
            />
            <span />
            <span
              className="nice-scale-label"
              style={Object {}}
            >
              Must have
            </span>
          </label>
        </li>
      </Item>
    </ol>
  </div>
</Scale>
`;

exports[`<Scale /> <Scale.Item /> should render with all labels 1`] = `
<Scale
  className={null}
  name="my-radio-name"
  onChange={[Function]}
  style={Object {}}
  tickLabels={true}
  value=""
>
  <div
    className="nice-scale"
    style={Object {}}
  >
    <ol
      className="nice-scale-selection"
    >
      <Item
        checked={false}
        className={null}
        key=".0"
        label="Nice to have"
        name="my-radio-name"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={1}
      >
        <li
          key="1"
        >
          <label>
            <input
              checked={false}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value={1}
            />
            <span />
            <span
              className="nice-scale-label"
              style={Object {}}
            >
              Nice to have
            </span>
          </label>
        </li>
      </Item>
      <Item
        checked={false}
        className={null}
        key=".1"
        label="Good to have"
        name="my-radio-name"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={5}
      >
        <li
          key="5"
        >
          <label>
            <input
              checked={false}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value={5}
            />
            <span />
            <span
              className="nice-scale-label"
              style={Object {}}
            >
              Good to have
            </span>
          </label>
        </li>
      </Item>
      <Item
        checked={false}
        className={null}
        key=".2"
        label="Must have"
        name="my-radio-name"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={10}
      >
        <li
          key="10"
        >
          <label>
            <input
              checked={false}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value={10}
            />
            <span />
            <span
              className="nice-scale-label"
              style={Object {}}
            >
              Must have
            </span>
          </label>
        </li>
      </Item>
    </ol>
  </div>
</Scale>
`;

exports[`<Scale /> <Scale.Item /> should render with custom className/style 1`] = `
<Scale
  className="my-custom-class"
  name="my-radio-name"
  onChange={[Function]}
  style={
    Object {
      "top": 0,
    }
  }
  tickLabels={true}
  value=""
>
  <div
    className="nice-scale my-custom-class"
    style={
      Object {
        "top": 0,
      }
    }
  >
    <ol
      className="nice-scale-selection"
    >
      <Item
        checked={false}
        className="my-custom-class"
        key=".0"
        label=""
        name="my-radio-name"
        onSelect={[Function]}
        style={
          Object {
            "top": 0,
          }
        }
        tickLabel={true}
        value="1"
      >
        <li
          key="1"
        >
          <label>
            <input
              checked={false}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value="1"
            />
            <span />
          </label>
        </li>
      </Item>
    </ol>
  </div>
</Scale>
`;

exports[`<Scale /> <Scale.Item /> should render with custom classes over items 1`] = `
<Scale
  className={null}
  name="projectid-radios"
  onChange={[Function]}
  style={Object {}}
  tickLabels={true}
  value=""
>
  <div
    className="nice-scale"
    style={Object {}}
  >
    <ol
      className="nice-scale-selection"
    >
      <Item
        checked={false}
        className="text-bold"
        key=".0"
        label="Nice to have"
        name="projectid-radios"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={1}
      >
        <li
          key="1"
        >
          <label>
            <input
              checked={false}
              name="projectid-radios"
              onChange={[Function]}
              type="radio"
              value={1}
            />
            <span />
            <span
              className="text-bold nice-scale-label"
              style={Object {}}
            >
              Nice to have
            </span>
          </label>
        </li>
      </Item>
      <Item
        checked={false}
        className="text-bold text-italic"
        key=".1"
        label=""
        name="projectid-radios"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={5}
      >
        <li
          key="5"
        >
          <label>
            <input
              checked={false}
              name="projectid-radios"
              onChange={[Function]}
              type="radio"
              value={5}
            />
            <span />
          </label>
        </li>
      </Item>
      <Item
        checked={false}
        className="text-uppercase text-brand"
        key=".2"
        label="Must have"
        name="projectid-radios"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={10}
      >
        <li
          key="10"
        >
          <label>
            <input
              checked={false}
              name="projectid-radios"
              onChange={[Function]}
              type="radio"
              value={10}
            />
            <span />
            <span
              className="text-uppercase text-brand nice-scale-label"
              style={Object {}}
            >
              Must have
            </span>
          </label>
        </li>
      </Item>
    </ol>
  </div>
</Scale>
`;

exports[`<Scale /> <Scale.Item /> should render with custom classes over outermost element 1`] = `
<Scale
  className="nice-bg-info"
  name="projectid-radios"
  onChange={[Function]}
  style={Object {}}
  tickLabels={true}
  value=""
>
  <div
    className="nice-scale nice-bg-info"
    style={Object {}}
  >
    <ol
      className="nice-scale-selection"
    >
      <Item
        checked={false}
        className={null}
        key=".0"
        label="Nice to have"
        name="projectid-radios"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={1}
      >
        <li
          key="1"
        >
          <label>
            <input
              checked={false}
              name="projectid-radios"
              onChange={[Function]}
              type="radio"
              value={1}
            />
            <span />
            <span
              className="nice-scale-label"
              style={Object {}}
            >
              Nice to have
            </span>
          </label>
        </li>
      </Item>
      <Item
        checked={false}
        className={null}
        key=".1"
        label=""
        name="projectid-radios"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={5}
      >
        <li
          key="5"
        >
          <label>
            <input
              checked={false}
              name="projectid-radios"
              onChange={[Function]}
              type="radio"
              value={5}
            />
            <span />
          </label>
        </li>
      </Item>
      <Item
        checked={false}
        className={null}
        key=".2"
        label="Must have"
        name="projectid-radios"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={10}
      >
        <li
          key="10"
        >
          <label>
            <input
              checked={false}
              name="projectid-radios"
              onChange={[Function]}
              type="radio"
              value={10}
            />
            <span />
            <span
              className="nice-scale-label"
              style={Object {}}
            >
              Must have
            </span>
          </label>
        </li>
      </Item>
    </ol>
  </div>
</Scale>
`;

exports[`<Scale /> <Scale.Item /> should render without one label 1`] = `
<Scale
  className={null}
  name="my-radio-name"
  onChange={[Function]}
  style={Object {}}
  tickLabels={true}
  value=""
>
  <div
    className="nice-scale"
    style={Object {}}
  >
    <ol
      className="nice-scale-selection"
    >
      <Item
        checked={false}
        className={null}
        key=".0"
        label="Nice to have"
        name="my-radio-name"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={1}
      >
        <li
          key="1"
        >
          <label>
            <input
              checked={false}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value={1}
            />
            <span />
            <span
              className="nice-scale-label"
              style={Object {}}
            >
              Nice to have
            </span>
          </label>
        </li>
      </Item>
      <Item
        checked={false}
        className={null}
        key=".1"
        label=""
        name="my-radio-name"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={5}
      >
        <li
          key="5"
        >
          <label>
            <input
              checked={false}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value={5}
            />
            <span />
          </label>
        </li>
      </Item>
      <Item
        checked={false}
        className={null}
        key=".2"
        label="Must have"
        name="my-radio-name"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={true}
        value={10}
      >
        <li
          key="10"
        >
          <label>
            <input
              checked={false}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value={10}
            />
            <span />
            <span
              className="nice-scale-label"
              style={Object {}}
            >
              Must have
            </span>
          </label>
        </li>
      </Item>
    </ol>
  </div>
</Scale>
`;

exports[`<Scale /> <Scale.Item /> should render without tick labels 1`] = `
<Scale
  className={null}
  name="my-radio-name"
  onChange={[Function]}
  style={Object {}}
  tickLabels={false}
  value=""
>
  <div
    className="nice-scale"
    style={Object {}}
  >
    <ol
      className="nice-scale-selection"
    >
      <Item
        checked={false}
        className={null}
        key=".0"
        label="Nice to have"
        name="my-radio-name"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={false}
        value={1}
      >
        <li
          key="1"
        >
          <label>
            <input
              checked={false}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value={1}
            />
            <span />
            <span
              className=""
              style={Object {}}
            >
              Nice to have
            </span>
          </label>
        </li>
      </Item>
      <Item
        checked={false}
        className={null}
        key=".1"
        label=""
        name="my-radio-name"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={false}
        value={5}
      >
        <li
          key="5"
        >
          <label>
            <input
              checked={false}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value={5}
            />
            <span />
          </label>
        </li>
      </Item>
      <Item
        checked={false}
        className={null}
        key=".2"
        label="Must have"
        name="my-radio-name"
        onSelect={[Function]}
        style={Object {}}
        tickLabel={false}
        value={10}
      >
        <li
          key="10"
        >
          <label>
            <input
              checked={false}
              name="my-radio-name"
              onChange={[Function]}
              type="radio"
              value={10}
            />
            <span />
            <span
              className=""
              style={Object {}}
            >
              Must have
            </span>
          </label>
        </li>
      </Item>
    </ol>
  </div>
</Scale>
`;
